static/css/styles.css
@import "https://unpkg.com/open-props";
@import "https://unpkg.com/open-props/normalize.min.css";

html,
body {
    height: 100%;
}

h2 {

    text-align: center;
    line-height: 1.2; 
    padding: 0.5em 0; 
    margin: 0; 
    
}

hr.a  {
    border-top: 3px double black;
    width: 210px;
  }

.watchlist-form {
    display: inline-block;
    margin-left: 20px;
}

#banner {
    background-image: url("../img/movies-unsplash.jpg");
    opacity: 1;
    -webkit-animation: flash 1.5s;
    animation: flash 1.5s;
}

@-webkit-keyframes flash {
    0% {
        opacity: .4;
    }
    100% {
        opacity: 1;
    }
}

@keyframes flash {
    0% {
        opacity: .4;
    }
    100% {
        opacity: 1;
    }
}

.sidebar  {

    background: linear-gradient(#ffffff, #c0c0c0 25%, #d88585 40%, #a52a2a);
    text-align: center;
    color: black;
    font-family: Bai Jamjuree;
    padding: 10px;
    font-weight: bold;

}

.sidebar h3  {

    font-size: 20px;
    font-weight: bold;

}


#sidebarLegend {

    font-size: 18px;
    font-weight: bold;

}

.sidebar fieldset {

    font-size: 15px;

}

.form-control.person {
    width: 225px;
}

.form-select.country {
    width: 150px;
}

.form-select.year {
    width: 200px;
}

fieldset.group  {
    margin: 0;
    padding: 0;
    margin-bottom: 1.25em;
    padding: .125em;
  }

fieldset.group legend {
    margin: 0;
    padding: 0;
    font-weight: bold;
    margin-left: 20px;
    font-size: 22px;
    color: black;
}


ul.checkbox  {
    margin: 0;
    padding: 0;
    margin-left: 50px;
    list-style: none;

}

ul.checkbox li input {
    display: block;
    padding-left: 15px;
    text-indent: -15px;
    width: 15px;
    height: 15px;
    padding: 0;
    margin: 0;
    position: relative;
    top: 20px;
    margin-left: -20px;
    margin-right: 10px;
}

ul.checkbox li {
    border: 1px transparent solid;
}

#sortBy {
    width: 200px;
    overflow: auto;
}

#providers {
    width: 200px;
    overflow: auto;
}

#directorName {
    width: 205px;

}

#movieWrapper {
    color: #FFFFFF;
    background-color: #070707;
    padding-top: 20px;
    padding-bottom: 20px;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

#mediaBgColor {
    background-color: #ffffff;
}

#mediaInfo {
    color: #000000;
    margin-left:550px;
    margin-top: -275px;
    min-height: 290px;

}

#movieBackdrop {
    position: relative;
    top: 40px;
    border-radius: 15px;
    margin-left: 30px;
    margin-top: 70px;
  }


.col.mediaOverview {
    color:black;
    margin-left: 30px;
    margin-right: 260px;
    font-size: medium

}


#trailer {
    color:black;
    margin-left: 30px;
    font-weight: bold;

}


#trailerScroll {
    display: grid;
    overflow-x: auto;
    grid-auto-flow: column;
    grid-auto-columns: 21%;
    overscroll-behavior-inline: contain;
}

#trailerResults {
    margin-bottom: 20px;
    margin-right: 120px;
}

#detailHome {
    color:black;
}

.form-select.mr-sm-2 {
    padding-left: 5px;
    background-color: #131213;
    color: #d6d6d6;
    border-radius: 5px;
    width: 250px;
    height: 45px;

}

#searchForm {
    width: 275px;
}

#movieCard {
    width: 18rem;
}

#movieRow {
    margin-right: 20px; margin-left: 20px;
}

#userChoiceActionButton {
    background-color: #9b1414 ;
    color: #ffffff;
    border-color: #e7e7e7;
}

#discoverButton {
    background-color: black;
    color: #ffffff;
    font-family: Bai Jamjuree;
}

#banner {
  border: 1px solid #333;
  height: 200px;
  background-size: cover;
  background-position: left;
  background-repeat: repeat-y
}
#banner h2 {
  color: #fff;
  font-size: 55px;
  padding-top: 80px;
  color: rgb(250, 237, 239);
  --color1: pink;
  --color2: orangered;
  --color3: red;
  --color4: magenta;
  font-family: Bad Script;
  }

.navbar {
        font-family: Bai Jamjuree;
        font-size: 15px;
      
}

#navBarTitle {
    font-size: 20px;
}

#navbarDarkDropdownMenuLink {
    font-size: 17px;
}

#logo {
    float:left;  
    width: 60px;
    height: 50px; 
    background-color: transparent;
}


.x-sign {
    --interval: 1s;
    display: block;
    text-shadow: 
      0 0 5px var(--color1),
      0 0 10px var(--color2),
      0 0 20px var(--color3),
      0 0 40px var(--color4);
    will-change: filter, color;
    filter: saturate(45%);
    animation: flicker steps(100) var(--interval) 1s infinite;
    color: rgba(255, 255, 255, 1);
    --color1: rgb(249, 203, 210);
    --color2: rgb(178, 27, 27);
    --color3: red;
    --color4: rgb(137, 24, 24);
    font-family: Play;
    font-size: 45px;
    text-align: center; /* Center the text within the block */
    margin-left: auto; /* Center the block element horizontally */
    margin-right: auto; /* Center the block element horizontally */
    padding: 0; /* Remove any default padding */
}

.btn {
    font-family: Bai Jamjuree;
    font-weight: bold;

}

